{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 618,
  "lineage": "7bb44555-41e5-a37e-dae6-e484f189db2a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_connection",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1687788996",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01885d6203694dd80",
            "security_group_rule_id": "sgr-058aeb13a7fa4b961",
            "self": false,
            "source_security_group_id": "sg-0fe903f29e40015e9",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_web.aws_security_group.sg",
            "module.sg_app_server.aws_security_group.sg",
            "module.sg_rds.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.app-alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:339712982430:loadbalancer/app/tf-apptier-alb/fa734583a9c7a771",
            "arn_suffix": "app/tf-apptier-alb/fa734583a9c7a771",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-tf-apptier-alb-118886337.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:339712982430:loadbalancer/app/tf-apptier-alb/fa734583a9c7a771",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-apptier-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b3e632216451135d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07b095ec5af8ea457"
              },
              {
                "subnet_id": "subnet-0e5252e7b8d05dbc5"
              }
            ],
            "subnets": [
              "subnet-07b095ec5af8ea457",
              "subnet-0e5252e7b8d05dbc5"
            ],
            "tags": {
              "Kind": "practice",
              "Name": "tf-apptier-alb"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-apptier-alb"
            },
            "vpc_id": "vpc-095d652c100494371",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_app.aws_security_group.sg",
            "module.subnet-priv-1a.aws_subnet.subnet",
            "module.subnet-priv-1b.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.appTier-tg",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:339712982430:targetgroup/tf-appTier-tg/15a55c838c0231e4",
            "arn_suffix": "targetgroup/tf-appTier-tg/15a55c838c0231e4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:339712982430:targetgroup/tf-appTier-tg/15a55c838c0231e4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:339712982430:loadbalancer/app/tf-apptier-alb/fa734583a9c7a771"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-appTier-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Kind": "practice",
              "Name": "tf-apptier-tg"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-apptier-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-095d652c100494371"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08ce8036184d6f193",
            "arn": "arn:aws:ec2:ap-south-1:339712982430:elastic-ip/eipalloc-08ce8036184d6f193",
            "association_id": "eipassoc-0f98add832874b539",
            "domain": "vpc",
            "id": "eipalloc-08ce8036184d6f193",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0e7ebb1e6dba1d46c",
            "private_dns": "ip-172-16-1-115.ap-south-1.compute.internal",
            "private_ip": "172.16.1.115",
            "public_dns": "ec2-13-203-90-136.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.203.90.136",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Kind": "practice",
              "Name": "tf-eip-1"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.http_listener_app",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:339712982430:listener/app/tf-apptier-alb/fa734583a9c7a771/03a420577f957a27",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:339712982430:targetgroup/tf-appTier-tg/15a55c838c0231e4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:339712982430:listener/app/tf-apptier-alb/fa734583a9c7a771/03a420577f957a27",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:339712982430:loadbalancer/app/tf-apptier-alb/fa734583a9c7a771",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app-alb.aws_lb.my_alb",
            "module.appTier-tg.aws_lb_target_group.tg",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_app.aws_security_group.sg",
            "module.subnet-priv-1a.aws_subnet.subnet",
            "module.subnet-priv-1b.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.http_listener_web",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:339712982430:listener/app/tf-webtier-alb/d9d5c9c2696f17d7/b3f568390d311084",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:339712982430:targetgroup/tf-webTier-tg/32fb3cb964f78c30",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:339712982430:listener/app/tf-webtier-alb/d9d5c9c2696f17d7/b3f568390d311084",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:339712982430:loadbalancer/app/tf-webtier-alb/d9d5c9c2696f17d7",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_web.aws_security_group.sg",
            "module.subnet-pub-1a.aws_subnet.subnet",
            "module.subnet-pub-1b.aws_subnet.subnet",
            "module.web-alb.aws_lb.my_alb",
            "module.webTier-tg.aws_lb_target_group.tg"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712982430:internet-gateway/igw-065e2b3d945621c6e",
            "id": "igw-065e2b3d945621c6e",
            "owner_id": "339712982430",
            "tags": {
              "Kind": "practice",
              "Name": "tf-igw"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-igw"
            },
            "vpc_id": "vpc-095d652c100494371"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712982430:vpc/vpc-095d652c100494371",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0ee270c6b1d901cb8",
            "default_route_table_id": "rtb-065363775d5f2778e",
            "default_security_group_id": "sg-023af64fd5053177c",
            "dhcp_options_id": "dopt-05be737b6007778f8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-095d652c100494371",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-065363775d5f2778e",
            "owner_id": "339712982430",
            "tags": {
              "Kind": "practice",
              "Name": "tf-vpc"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08ce8036184d6f193",
            "association_id": "eipassoc-0f98add832874b539",
            "connectivity_type": "public",
            "id": "nat-067b8be191ea4ed36",
            "network_interface_id": "eni-0e7ebb1e6dba1d46c",
            "private_ip": "172.16.1.115",
            "public_ip": "13.203.90.136",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b2240de951c47469",
            "tags": {
              "Kind": "practice",
              "Name": "tf-nat-1"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-nat-1"
            }
          },
          "dependencies": [
            "module.eip.aws_eip.my_eip",
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.subnet-pub-1a.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.private_rt",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712982430:route-table/rtb-066a22ef234113197",
            "id": "rtb-066a22ef234113197",
            "owner_id": "339712982430",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-067b8be191ea4ed36",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Kind": "practice",
              "Name": "tf-rt-private"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-095d652c100494371"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eip.aws_eip.my_eip",
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.nat.aws_nat_gateway.my_nat",
            "module.subnet-pub-1a.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.public_rt",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712982430:route-table/rtb-0a3b03b3925fca97c",
            "id": "rtb-0a3b03b3925fca97c",
            "owner_id": "339712982430",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-065e2b3d945621c6e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Kind": "practice",
              "Name": "tf-rt-public"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-095d652c100494371"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rt_ass_priv_1a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077e813dd4b6ad818",
            "route_table_id": "rtb-066a22ef234113197",
            "subnet_id": "subnet-07b095ec5af8ea457"
          },
          "dependencies": [
            "module.eip.aws_eip.my_eip",
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.nat.aws_nat_gateway.my_nat",
            "module.private_rt.aws_route_table.my_rt",
            "module.subnet-priv-1a.aws_subnet.subnet",
            "module.subnet-pub-1a.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.rt_ass_priv_1b",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d64a7783daa90bb9",
            "route_table_id": "rtb-066a22ef234113197",
            "subnet_id": "subnet-0e5252e7b8d05dbc5"
          },
          "dependencies": [
            "module.eip.aws_eip.my_eip",
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.nat.aws_nat_gateway.my_nat",
            "module.private_rt.aws_route_table.my_rt",
            "module.subnet-priv-1b.aws_subnet.subnet",
            "module.subnet-pub-1a.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.rt_ass_pub_1a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098d2a025105d5b82",
            "route_table_id": "rtb-0a3b03b3925fca97c",
            "subnet_id": "subnet-0b2240de951c47469"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.public_rt.aws_route_table.my_rt",
            "module.subnet-pub-1a.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.rt_ass_pub_1b",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bf5f0b7b241e5fd",
            "route_table_id": "rtb-0a3b03b3925fca97c",
            "subnet_id": "subnet-0d49bf5f7c6852420"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.public_rt.aws_route_table.my_rt",
            "module.subnet-pub-1b.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.rt_ass_rds_priv_1a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049d55edf3e657070",
            "route_table_id": "rtb-066a22ef234113197",
            "subnet_id": "subnet-0a94d378fe91581af"
          },
          "dependencies": [
            "module.eip.aws_eip.my_eip",
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.nat.aws_nat_gateway.my_nat",
            "module.private_rt.aws_route_table.my_rt",
            "module.subnet-pub-1a.aws_subnet.subnet",
            "module.subnet-rds-priv-1a.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.rt_ass_rds_priv_1b",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084dfb5e20c7a581e",
            "route_table_id": "rtb-066a22ef234113197",
            "subnet_id": "subnet-05c4b06f071bf84d3"
          },
          "dependencies": [
            "module.eip.aws_eip.my_eip",
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.nat.aws_nat_gateway.my_nat",
            "module.private_rt.aws_route_table.my_rt",
            "module.subnet-pub-1a.aws_subnet.subnet",
            "module.subnet-rds-priv-1b.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.sg_alb_app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712982430:security-group/sg-0b3e632216451135d",
            "description": " SG for APP ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3e632216451135d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow on 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow on 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow on 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-alb-sg",
            "name_prefix": "",
            "owner_id": "339712982430",
            "revoke_rules_on_delete": false,
            "tags": {
              "Kind": "practice",
              "Name": "tf-app-alb-sg"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-app-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-095d652c100494371"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg_alb_web",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712982430:security-group/sg-0a7c1cf92e4e6c132",
            "description": " SG for WEB ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7c1cf92e4e6c132",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow on 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow on 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow on 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-alb-sg",
            "name_prefix": "",
            "owner_id": "339712982430",
            "revoke_rules_on_delete": false,
            "tags": {
              "Kind": "practice",
              "Name": "tf-web-alb-sg"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-web-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-095d652c100494371"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg_app_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712982430:security-group/sg-01885d6203694dd80",
            "description": " SG for app_server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01885d6203694dd80",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow on 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "allow on 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a7c1cf92e4e6c132"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "allow on 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a7c1cf92e4e6c132"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app_server-sg",
            "name_prefix": "",
            "owner_id": "339712982430",
            "revoke_rules_on_delete": false,
            "tags": {
              "Kind": "practice",
              "Name": "tf-app_server-sg"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-app_server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-095d652c100494371"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_web.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.sg_rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712982430:security-group/sg-0fe903f29e40015e9",
            "description": "SG for rds",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "allow",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01885d6203694dd80"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0fe903f29e40015e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow on 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "allow on 3306",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01885d6203694dd80"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "tf_sg_rds",
            "name_prefix": "",
            "owner_id": "339712982430",
            "revoke_rules_on_delete": false,
            "tags": {
              "Kind": "practice",
              "Name": "tf-db-sg"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-095d652c100494371"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_web.aws_security_group.sg",
            "module.sg_app_server.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.sg_web_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712982430:security-group/sg-0b79e406f63ceca1a",
            "description": " SG for web_server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b79e406f63ceca1a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow on 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "allow on 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a7c1cf92e4e6c132"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "allow on 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a7c1cf92e4e6c132"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_server-sg",
            "name_prefix": "",
            "owner_id": "339712982430",
            "revoke_rules_on_delete": false,
            "tags": {
              "Kind": "practice",
              "Name": "tf-web_server-sg"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-web_server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-095d652c100494371"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_web.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-priv-1a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712982430:subnet/subnet-07b095ec5af8ea457",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b095ec5af8ea457",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712982430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kind": "practice",
              "Name": "tf-priv-ap-south-1a"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-priv-ap-south-1a"
            },
            "vpc_id": "vpc-095d652c100494371"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-priv-1b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712982430:subnet/subnet-0e5252e7b8d05dbc5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5252e7b8d05dbc5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712982430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kind": "practice",
              "Name": "tf-priv-ap-south-1b"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-priv-ap-south-1b"
            },
            "vpc_id": "vpc-095d652c100494371"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-pub-1a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712982430:subnet/subnet-0b2240de951c47469",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2240de951c47469",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712982430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kind": "practice",
              "Name": "tf-pub-ap-south-1a"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-pub-ap-south-1a"
            },
            "vpc_id": "vpc-095d652c100494371"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-pub-1b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712982430:subnet/subnet-0d49bf5f7c6852420",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d49bf5f7c6852420",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712982430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kind": "practice",
              "Name": "tf-pub-ap-south-1b"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-pub-ap-south-1b"
            },
            "vpc_id": "vpc-095d652c100494371"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-rds-priv-1a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712982430:subnet/subnet-0a94d378fe91581af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a94d378fe91581af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712982430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kind": "practice",
              "Name": "tf-priv-rds-ap-south-1a"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-priv-rds-ap-south-1a"
            },
            "vpc_id": "vpc-095d652c100494371"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-rds-priv-1b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712982430:subnet/subnet-05c4b06f071bf84d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c4b06f071bf84d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712982430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kind": "practice",
              "Name": "tf-priv-rds-ap-south-1b"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-priv-rds-ap-south-1b"
            },
            "vpc_id": "vpc-095d652c100494371"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.web-alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:339712982430:loadbalancer/app/tf-webtier-alb/d9d5c9c2696f17d7",
            "arn_suffix": "app/tf-webtier-alb/d9d5c9c2696f17d7",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-webtier-alb-1315908805.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:339712982430:loadbalancer/app/tf-webtier-alb/d9d5c9c2696f17d7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-webtier-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a7c1cf92e4e6c132"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b2240de951c47469"
              },
              {
                "subnet_id": "subnet-0d49bf5f7c6852420"
              }
            ],
            "subnets": [
              "subnet-0b2240de951c47469",
              "subnet-0d49bf5f7c6852420"
            ],
            "tags": {
              "Kind": "practice",
              "Name": "tf-webtier-alb"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-webtier-alb"
            },
            "vpc_id": "vpc-095d652c100494371",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_web.aws_security_group.sg",
            "module.subnet-pub-1a.aws_subnet.subnet",
            "module.subnet-pub-1b.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.webTier-tg",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:339712982430:targetgroup/tf-webTier-tg/32fb3cb964f78c30",
            "arn_suffix": "targetgroup/tf-webTier-tg/32fb3cb964f78c30",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:339712982430:targetgroup/tf-webTier-tg/32fb3cb964f78c30",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:339712982430:loadbalancer/app/tf-webtier-alb/d9d5c9c2696f17d7"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-webTier-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Kind": "practice",
              "Name": "tf-webtier-tg"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-webtier-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-095d652c100494371"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    }
  ]
}